[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Fonts/SmallFontItalic.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/Fonts/SmallFontBoldItalic.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/Scenes/Labels/LabelEx.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/Scripts/HSliderEx.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Themes/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/Scripts/HSlider.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 6.0
draw_center = false
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.345098, 0.278431, 0.14902, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="HSliderEx" type="VBoxContainer"]
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 125.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelExDesc" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_right = 103.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Unknown Slider:"
font_style = 8

[node name="LabelExValue" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 107.0
margin_right = 125.0
margin_bottom = 20.0
size_flags_horizontal = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
font_style = 11

[node name="HSlider" type="HSlider" parent="."]
margin_top = 24.0
margin_right = 125.0
margin_bottom = 46.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="changed" from="HSlider" to="." method="_on_HSlider_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
